# MailCraft

./: .gitignore  AGENTS.md  README.md
.cursor/: BUGBOT.md
.cursor/rules/: mailcraft-jira-space.mdc
.cursor/skills/audit-skills/: SKILL.md  reference.md
.cursor/skills/backend-api/: SKILL.md  reference.md
.cursor/skills/data-layer/: SKILL.md  reference.md
.cursor/skills/debug-local/: SKILL.md
.cursor/skills/frontend-patterns/: SKILL.md  reference.md
.cursor/skills/git-messages/: SKILL.md
.cursor/skills/phased-planning/: SKILL.md
.cursor/skills/run/: SKILL.md
.cursor/skills/ship-checklist/: SKILL.md
backend/: email_templates.db  email_templates.db-shm  pyproject.toml
backend/.cursor/: BUGBOT.md
backend/app/: __init__.py  app_factory.py  database.py  models.py  seed.py
backend/app/routers/: __init__.py  content.py  health.py  metrics.py  templates.py
backend/tests/: test_api.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.ts
frontend/src/context/: SidebarProvider.tsx  sidebar-context.ts
frontend/src/hooks/: useContent.ts  useTemplateEditor.ts  useTemplates.ts
frontend/src/lib/: templateOnboardingStorage.ts
frontend/src/styles/: global.css  variables.css
frontend/src/types/: index.ts
game/: index.html  package-lock.json  package.json  vite.config.ts
game/src/: App.test.tsx  App.tsx
game/src/data/: accessories.ts  ranks.ts
game/src/store/: gameStore.test.ts  gameStore.ts
game/src/styles/: global.css  variables.css
(+88 files in other folders)
